Add logic to load easyrtc client library
Conflicts:
	app/client/index.html
	app/client/main.js

--- a/app/client/index.html
+++ b/app/client/index.html
@@ -3,6 +3,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+  <script src="//localhost:8080/socket.io/socket.io.js"></script>
+  <script type="text/javascript" src="//localhost:8080/easyrtc/easyrtc.js"></script>
 </head>
 
 <template name="layout">
