Add new roomtype 'video'

--- a/app/client/chat/info_panel/main.html
+++ b/app/client/chat/info_panel/main.html
@@ -36,6 +36,10 @@
         {{else}}
           {{#if isCurrentRoomtype "pm" }}
             {{> pm_nick_info}}
+          {{else}}
+            {{#if isCurrentRoomtype "video"}}
+              {{> video_chat_nicks}}
+            {{/if}}
           {{/if}}
         {{/if}}
       </div>
