--- a/app/client/chat/chat_connections/main.html
+++ b/app/client/chat/chat_connections/main.html
@@ -14,6 +14,7 @@
           {{#each servers}}
             {{> chat_connection_server}}
           {{/each}}
+          {{> video_chat_connection_server}}
         </ul>
       </div>
     </div>
