Add enable/disable camera feature in video chat

--- a/app/client/chat/video_chat/video.html
+++ b/app/client/chat/video_chat/video.html
@@ -4,7 +4,7 @@
       <video id="self-video" class="video-screen" autoplay></video>
       <div id="self-username" class="video-user channel-user">{{showLocalUsername}}</div>
       <div style="margin-left:5px; margin-top:10px;">
-        <input type="checkbox" id="enable-camera">
+        <input type="checkbox" id="enable-camera" {{isCameraEnabled}}>
         <label for="enable-camera">Camera</label>
       </div>
       {{ showHangupButton }}
