Add option to enable/disable video chat in settings
Conflicts:
	app/client/main.js
	app/client/routes.js
	app/server/lib/03_methods.js
	app/server/publish.js

--- a/app/client/accounts/account.html
+++ b/app/client/accounts/account.html
@@ -54,6 +54,12 @@
                     <button type="submit" id="btn-change-password" class="btn btn-success">Submit</button>
                 </form>
             </div>
+            <div class="container-header regular bold" style="margin-top:20px">Video Chat</div>
+            <div class="container-inner less-margin-top">
+              <input type="checkbox" id="enable-video-chat" checked="{{isVideoChatEnabled}}"/><label for="enable-video-chat">Enable</label>
+              <br>
+              <button type="submit" id="btn-enable-video-chat" class="btn btn-success">Submit</button>
+            </div>
         </div>
     </div>
 </template>
