--- a/app/client/chat/chat_connections/main.html
+++ b/app/client/chat/chat_connections/main.html
@@ -14,7 +14,9 @@
           {{#each servers}}
             {{> chat_connection_server}}
           {{/each}}
-          {{> video_chat_connection_server}}
+          {{#if isVideoChatEnabled}}
+            {{> video_chat_connection_server}}
+          {{/if}}
         </ul>
       </div>
     </div>
