admin: show nick status data from db

--- a/app/client/admin/admin.html
+++ b/app/client/admin/admin.html
@@ -16,71 +16,39 @@
           <table class="table table-striped table-bordered">
             <thead>
               <tr>
-                <th>Nick<i class="sort-icon pull-right fa fa-sort-desc"></i></th>
-                <th>Server<i class="sort-icon pull-right fa fa-sort"></i></th>
-                <th>Statu<i class="sort-icon pull-right fa fa-sort"></i>s</th>
-                <th>Actions<i class="sort-icon pull-right fa fa-sort"></i></th>
+                <th>Nick<i class="sort-icon pull-right {{ sortIcon 'nick' }}"></i></th>
+                <th>Server<i class="sort-icon pull-right {{ sortIcon 'server' }}"></i></th>
+                <th>Status<i class="sort-icon pull-right {{ sortIcon 'status' }}"></i></th>
+                <th>Actions</th>
               </tr>
             </thead>
             <tbody>
-              <tr>
-                <td>rtnpro</td>
-                <td>Freenode</td>
-                <td>Connected</td>
-                <td>
-                  <a href="#">Disconnect</a>
-                  <span>|</span>
-                  <a href="#">Delete</a>
-                </td>
-              </tr>
-              <tr>
-                <td>rtnpro</td>
-                <td>OFTC</td>
-                <td>Connected</td>
-                <td>
-                  <a href="#">Disconnect</a>
-                  <span>|</span>
-                  <a href="#">Delete</a>
-                </td>
-              </tr>
-              <tr>
-                <td>rtnpro</td>
-                <td>Mozilla</td>
-                <td>Disconnected</td>
-                <td>
-                  <a href="#">Disconnect</a>
-                  <span>|</span>
-                  <a href="#">Delete</a>
-                </td>
-              </tr>
-              <tr>
-                <td>sayan</td>
-                <td>Freenode</td>
-                <td>Connected</td>
-                <td>
-                  <a href="#">Disconnect</a>
-                  <span>|</span>
-                  <a href="#">Delete</a>
-                </td>
-              </tr>
-              <tr>
-                <td>dne0</td>
-                <td>Freenode</td>
-                <td>Connected</td>
-                <td>
-                  <a href="#">Disconnect</a>
-                  <span>|</span>
-                  <a href="#">Delete</a>
-                </td>
-              </tr>
+              {{#each data}}
+                <tr>
+                  <td>{{ nick }}</td>
+                  <td>{{ name }}</td>
+                  <td>{{ status }}</td>
+                  <td>
+                    {{#if statusOppositeAction status }}
+                      <a href="#">{{statusOppositeAction status}}</a>
+                      <span> | </span>
+                    {{/if}}
+                    <a href="#">Delete</a>
+                  </td>
+                </tr>
+              {{/each}}
             </tbody>
           </table>
         </div>
         <div class="paginator">
-          <a href="#" id="previous-icon" class="next-prev-icon"><icon class="glyphicon glyphicon-chevron-left"></icon></a>
-          <input id="page-no" type="text" value="1" data-current-page="{{currentPage}}" data-total-pages=""/>
-          <span class="total-count"> / 100</span>
-          <a href="#" id="next-icon" class="next-prev-icon"><icon class="glyphicon glyphicon-chevron-right"></icon></a>
+          {{#if showPreviousButton }}
+            <a href="#" id="previous-icon" class="next-prev-icon"><icon class="glyphicon glyphicon-chevron-left"></icon></a>
+          {{/if}}
+          <input id="page-no" type="text" value="{{currentPage}}" data-current-page="{{currentPage}}" data-total-pages="{{totalPages}}"/>
+          <span class="total-count"> / {{totalPages}}</span>
+          {{#if showNextButton }}
+            <a href="#" id="next-icon" class="next-prev-icon"><icon class="glyphicon glyphicon-chevron-right"></icon></a>
+          {{/if }}
         </div>
       </div>
     </div>
