admin: add sort functionality in nick status ui

--- a/app/client/admin/admin.html
+++ b/app/client/admin/admin.html
@@ -16,9 +16,9 @@
           <table class="table table-striped table-bordered">
             <thead>
               <tr>
-                <th>Nick<i class="sort-icon pull-right {{ sortIcon 'nick' }}"></i></th>
-                <th>Server<i class="sort-icon pull-right {{ sortIcon 'server' }}"></i></th>
-                <th>Status<i class="sort-icon pull-right {{ sortIcon 'status' }}"></i></th>
+                <th class="sortable" data-field="nick">Nick<i class="sort-icon pull-right {{ sortIcon 'nick' }}"></i></th>
+                <th class="sortable" data-field="name">Server<i class="sort-icon pull-right {{ sortIcon 'name' }}"></i></th>
+                <th class="sortable" data-field="status">Status<i class="sort-icon pull-right {{ sortIcon 'status' }}"></i></th>
                 <th>Actions</th>
               </tr>
             </thead>
