--- a/app/client/admin/admin.html
+++ b/app/client/admin/admin.html
@@ -39,16 +39,19 @@
               {{/each}}
             </tbody>
           </table>
+          <div class="paginator">
+            {{#if showPreviousButton }}
+              <a href="#" id="previous-icon" class="next-prev-icon"><icon class="glyphicon glyphicon-chevron-left"></icon></a>
+            {{/if}}
+            <input id="page-no" type="text" value="{{currentPage}}" data-current-page="{{currentPage}}" data-total-pages="{{totalPages}}"/>
+            <span class="total-count"> / {{totalPages}}</span>
+            {{#if showNextButton }}
+              <a href="#" id="next-icon" class="next-prev-icon"><icon class="glyphicon glyphicon-chevron-right"></icon></a>
+            {{/if }}
+          </div>
         </div>
-        <div class="paginator">
-          {{#if showPreviousButton }}
-            <a href="#" id="previous-icon" class="next-prev-icon"><icon class="glyphicon glyphicon-chevron-left"></icon></a>
-          {{/if}}
-          <input id="page-no" type="text" value="{{currentPage}}" data-current-page="{{currentPage}}" data-total-pages="{{totalPages}}"/>
-          <span class="total-count"> / {{totalPages}}</span>
-          {{#if showNextButton }}
-            <a href="#" id="next-icon" class="next-prev-icon"><icon class="glyphicon glyphicon-chevron-right"></icon></a>
-          {{/if }}
+        <div id="nick-status-error">
+          <h3>{{errors}}</h3>
         </div>
       </div>
     </div>
