admin: show loader in nick status ui

--- a/app/client/admin/admin.html
+++ b/app/client/admin/admin.html
@@ -1,5 +1,5 @@
 <template name="admin">
-  <div class="chatlogs-loader-msg" style="display:none">Searching...</div>
+  <div id="chatlogs-loader" style="display:none; text-align: center; left:34%">Loading...</div>
   <div class="container nick-status-container">
     <div class="row">
       <div id="search-fields" class="col-md-7">
