--- a/app/client/admin/admin.html
+++ b/app/client/admin/admin.html
@@ -27,7 +27,7 @@
                 <tr>
                   <td>{{ nick }}</td>
                   <td>{{ name }}</td>
-                  <td>{{ status }}</td>
+                  <td>{{ firstCharUppercase status }}</td>
                   <td>
                     {{#if statusOppositeAction status }}
                       <a href="#">{{statusOppositeAction status}}</a>
