admin: add admin authorization in nick status page

--- a/app/client/index.html
+++ b/app/client/index.html
@@ -101,6 +101,10 @@
   {{> intro}}
 </template>
 
+<template name="user_not_authorized">
+  <h3>You are authorized to view this page.</h3>
+</template>
+
 <template name="signin_form">
   <form id="user-signin" class="form well offset4 span4">
     <fieldset>
