admin: change nick status url from admin admin/nick-status

--- a/app/client/admin/nick_status.html
+++ b/app/client/admin/nick_status.html
@@ -1,4 +1,4 @@
-<template name="admin">
+<template name="nick_status">
   <div id="chatlogs-loader" style="display:none; text-align: center; left:34%">Loading...</div>
   <div class="container nick-status-container">
     <div class="row">
