admin: integrate sidebar in nick status page

--- a/app/client/admin/nick_status.html
+++ b/app/client/admin/nick_status.html
@@ -1,6 +1,7 @@
 <template name="nick_status">
   <div id="chatlogs-loader" style="display:none; text-align: center; left:34%">Loading...</div>
-  <div class="container nick-status-container">
+  {{>admin_sidebar}}
+  <div class="container nick-status-container col-xs-12 drawer drawer-main-content col-md-10 col-sm-12">
     <div class="row">
       <div id="search-fields" class="col-md-7">
         <i class="fa fa-search"></i>
