admin: fix nick-status url in sidebar

--- a/app/client/admin/sidebar.html
+++ b/app/client/admin/sidebar.html
@@ -6,7 +6,7 @@
       </div>
       <div class="panel-body scroller-container">
         <ul class="nav bs-sidenav">
-          <li class="{{isRouteActive 'admin-nick-status'}}"><a href="admin/nick-status/">Nick Status</a></li>
+          <li class="{{isRouteActive 'admin-nick-status'}}"><a href="/admin/nick-status/">Nick Status</a></li>
           <li><a>Analytics</a></li>
           <li><a href="admin/collections
           ">Collections</a></li>
