refactor logic to load easyrtc libs

--- a/app/client/index.html
+++ b/app/client/index.html
@@ -3,6 +3,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+  <script type="text/javascript">
+    function loadEasyrtc() {
+      var script = document.createElement("script");
+      script.type = "text/javascript";
+      script.src = Meteor.settings.public.video_chat_server;
+      script.src += 'socket.io/socket.io.js';
+      var script_1 = document.createElement("script");
+      script_1.type = "text/javascript";
+      script_1.src = Meteor.settings.public.video_chat_server;
+      script_1.src += 'easyrtc/easyrtc.js';
+      document.getElementsByTagName('head')[0].appendChild(script);
+      document.getElementsByTagName('head')[0].appendChild(script_1);
+    }
+    loadEasyrtc();
+  </script>
 </head>
 
 <template name="layout">
@@ -20,8 +35,6 @@
 </template>
 
 <template name="header">
-  <script src="{{video_chat_host}}/socket.io/socket.io.js"></script>
-  <script type="text/javascript" src="{{video_chat_host}}/easyrtc/easyrtc.js"></script>
   <nav id="global-navbar" class="navbar navbar-fixed-top waartaa-navbar" role="navigation">
     <div class="container">
       <div class="navbar-header">
